solve dropdown__item overlapping problem

--- a/components/DropdownButton/DropdownButton.module.css
+++ b/components/DropdownButton/DropdownButton.module.css
@@ -75,6 +75,10 @@
     border-radius: 20px 20px 0px 0px;
 }
 
+.dropdown__btn .dropdown:hover {
+    border-radius: 20px 20px 0px 0px;
+}
+
 .d__P {
     width: 70%;
     text-align: left;
@@ -107,6 +111,10 @@
 
     .dropdown__btn {
         padding: 10px 0.2rem;
+    }
+
+    .dropdown__item {
+        padding: 0.5rem;
     }
 }
 
